app/src/main/java/com/example/darkfox/trainingnotes/dto/errors/FirestoreExceptionCreatingAccountDoc.kt
package com.example.darkfox.trainingnotes.dto.errors

class FirestoreExceptionCreatingAccountDoc(val failCause:String) : Exception(failCause) {
}